--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="lib/style.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@ function createMiscMenuPage(miscPatches) {
 	var htmlString_before = '<div id="header">\
 		<h1>Misc</h1>\
 		<h1>&bull;</h1>\
-		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="img/back.png" alt="back">Back</a></h1>\
+		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="lib/back.png" alt="back">Back</a></h1>\
 	</div>\
 	<div class="container_misc">';
 
@@ -94,7 +94,7 @@ function createMixerPage() {
 	$('body').append('<div id="header">\
 		<h1>Mixer</h1>\
 		<h1>&bull;</h1>\
-		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="img/back.png" alt="back">Back</a></h1>\
+		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="lib/back.png" alt="back">Back</a></h1>\
 	</div>\
 	<div id="interface_area">\
 	<div id="interface"></div>\
@@ -106,7 +106,7 @@ function createBinauralPage() {
 	$('body').append('<div id="header">\
 		<h1>Binaural Interface</h1>\
 		<h1>&bull;</h1>\
-		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="img/back.png" alt="back">Back</a></h1>\
+		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="lib/back.png" alt="back">Back</a></h1>\
 	</div>\
 	<div id="interface_area">\
 	<ul class="nav nav-tabs" id="interfaceNavUl" role="tablist">\
@@ -125,7 +125,7 @@ function createMiscPatchPage(patchName) {
 	$('body').append('<div id="header">\
 		<h1>' + patchName + '</h1>\
 		<h1>&bull;</h1>\
-		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="img/back.png" alt="back">Back</a></h1>\
+		<h1><a href="#" onclick="unloadPatch()" id="unload"><img src="lib/back.png" alt="back">Back</a></h1>\
 	</div>\
 	<div id="interface_area">\
 	<div id="interface"></div>\
